# turingdb-python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-check.yml  ci-release.yml  ci_ubuntu.yml
licenses/: BSL.txt  TEL.txt
python/turingdb/: __init__.py  s3.py  turingdb.py
