[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "turingdb"
version = "0.1.0"
dependencies = []
requires-python = ">=3.10"
classifiers = [
        "Operating System :: POSIX :: Linux",
]

[project.scripts]
turingdb = "turingdb:main"

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/"
wheel.packages = ["python/turingdb"]

[tool.uv]
dev-dependencies = [
    "build>=0.10.0",
    "twine>=4.0.0"
]
